force-app/main/default/objects/Contact/fields/Apollo_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Contact_ID__c</fullName>
    <label>Apollo Contact ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>