force-app/main/default/objects/Contact/fields/Company_Research__c.field-meta.xml
<CustomField>
    <fullName>Company_Research__c</fullName>
    <label>Company Research</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>