force-app/main/default/objects/Contact/fields/Company_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Company_Snapshot__c</fullName>
    <label>Company Snapshot</label>
    <description>2-3 sentence summary of the company signal and why this contact is relevant. Written by Scout at a glance for Dylan. Updated by Lookahead Writer when new signals are found.</description>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>