force-app/main/default/objects/Contact/fields/Contact_Research__c.field-meta.xml
<CustomField>
    <fullName>Contact_Research__c</fullName>
    <label>Contact Research</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>