force-app/main/default/objects/Contact/fields/Contact_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Contact_Specialty__c</fullName>
    <label>Contact Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PV</fullName><default>false</default></value>
            <value><fullName>BESS</fullName><default>false</default></value>
            <value><fullName>Wind</fullName><default>false</default></value>
            <value><fullName>Utility</fullName><default>false</default></value>
            <value><fullName>CNI</fullName><default>false</default></value>
            <value><fullName>Unknown</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>