force-app/main/default/objects/Contact/fields/Copy_Generated_Through_Stage__c.field-meta.xml
<CustomField>
    <fullName>Copy_Generated_Through_Stage__c</fullName>
    <label>Copy Generated Through Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Stage 1</fullName><default>false</default></value>
            <value><fullName>Stage 2</fullName><default>false</default></value>
            <value><fullName>Stage 3</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>