force-app/main/default/objects/Contact/fields/Current_Touch__c.field-meta.xml
<CustomField>
    <fullName>Current_Touch__c</fullName>
    <label>Current Touch Number</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>