force-app/main/default/objects/Contact/fields/Email_Draft_DirectAsk__c.field-meta.xml
<CustomField>
    <fullName>Email_Draft_DirectAsk__c</fullName>
    <label>T10 - Direct Ask Email</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>