force-app/main/default/objects/Contact/fields/Email_Draft_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Email_Draft_FollowUp__c</fullName>
    <label>T6 - Follow-Up Email</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>