force-app/main/default/objects/Contact/fields/Email_Draft_Intro__c.field-meta.xml
<CustomField>
    <fullName>Email_Draft_Intro__c</fullName>
    <label>T2 - Intro Email</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>