force-app/main/default/objects/Contact/fields/Email_Draft_Pause__c.field-meta.xml
<CustomField>
    <fullName>Email_Draft_Pause__c</fullName>
    <label>T13 - Pause Email</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>