force-app/main/default/objects/Contact/fields/Email_Draft_Sub12__c.field-meta.xml
<CustomField>
    <fullName>Email_Draft_Sub12__c</fullName>
    <label>T12 - Email (Secondary)</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>