force-app/main/default/objects/Contact/fields/Email_Draft_Value2__c.field-meta.xml
<CustomField>
    <fullName>Email_Draft_Value2__c</fullName>
    <label>T7 - Value-Add Email (Ian)</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>