force-app/main/default/objects/Contact/fields/Email_Opens_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Opens_Count__c</fullName>
    <label>Email Opens Count</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>