force-app/main/default/objects/Contact/fields/Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified__c</fullName>
    <label>Email Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Verified</fullName><default>false</default></value>
            <value><fullName>Unverified</fullName><default>false</default></value>
            <value><fullName>Risky</fullName><default>false</default></value>
            <value><fullName>Invalid</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>