force-app/main/default/objects/Contact/fields/Enrichment_Source__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Source__c</fullName>
    <label>Enrichment Source</label>
    <type>Text</type>
    <length>255</length>
</CustomField>