force-app/main/default/objects/Contact/fields/Exclude_From_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Sequence__c</fullName>
    <label>Exclude From Sequence</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>