force-app/main/default/objects/Contact/fields/Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score__c</fullName>
    <label>Intent Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>