force-app/main/default/objects/Contact/fields/Intent_Signals__c.field-meta.xml
<CustomField>
    <fullName>Intent_Signals__c</fullName>
    <label>Buying Intent Signals</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>