force-app/main/default/objects/Contact/fields/Is_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Is_Onboarded__c</fullName>
    <label>Is Onboarded</label>
    <type>Checkbox</type>
    <formula>Account.Onboarded_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>