force-app/main/default/objects/Contact/fields/LinkedIn_Connected__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Connected__c</fullName>
    <label>LinkedIn Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Sent</fullName><default>false</default></value>
            <value><fullName>Pending</fullName><default>false</default></value>
            <value><fullName>Connected</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>