force-app/main/default/objects/Contact/fields/LinkedIn_Connection_Note__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Connection_Note__c</fullName>
    <label>T1 - LinkedIn Connection Request</label>
    <type>Text</type>
    <length>200</length>
</CustomField>