force-app/main/default/objects/Contact/fields/LinkedIn_Message_Draft_1__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Message_Draft_1__c</fullName>
    <label>T4 - LinkedIn Message (Primary)</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>