force-app/main/default/objects/Contact/fields/LinkedIn_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile_URL__c</fullName>
    <label>LinkedIn Profile URL</label>
    <type>Url</type>
</CustomField>