force-app/main/default/objects/Contact/fields/Meaningful_Reply__c.field-meta.xml
<CustomField>
    <fullName>Meaningful_Reply__c</fullName>
    <label>Meaningful Reply Received</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>