force-app/main/default/objects/Contact/fields/Next_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Touch_Date__c</fullName>
    <label>Next Touch Date</label>
    <type>Date</type>
</CustomField>