force-app/main/default/objects/Contact/fields/Outreach_Status__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Status__c</fullName>
    <label>Outreach Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Cold</fullName><default>false</default></value>
            <value><fullName>Attempting Contact</fullName><default>false</default></value>
            <value><fullName>Engaged</fullName><default>false</default></value>
            <value><fullName>Meeting Scheduled</fullName><default>false</default></value>
            <value><fullName>Deferred</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>