force-app/main/default/objects/Contact/fields/Reply_Channel__c.field-meta.xml
<CustomField>
    <fullName>Reply_Channel__c</fullName>
    <label>Reply Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>false</default></value>
            <value><fullName>LinkedIn</fullName><default>false</default></value>
            <value><fullName>Phone</fullName><default>false</default></value>
            <value><fullName>Other</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>