force-app/main/default/objects/Contact/fields/Reply_Date__c.field-meta.xml
<CustomField>
    <fullName>Reply_Date__c</fullName>
    <label>Reply Date</label>
    <type>Date</type>
</CustomField>