force-app/main/default/objects/Contact/fields/Reply_Type__c.field-meta.xml
<CustomField>
    <fullName>Reply_Type__c</fullName>
    <label>Reply Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Positive</fullName><default>false</default></value>
            <value><fullName>Not Interested / Bad Timing</fullName><default>false</default></value>
            <value><fullName>Hard Opt-Out</fullName><default>false</default></value>
            <value><fullName>Auto-Reply / OOO</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>