force-app/main/default/objects/Contact/fields/Sequence_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Stage__c</fullName>
    <label>Sequence Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Stage 1 — Initial Outreach</fullName><default>false</default></value>
            <value><fullName>Stage 2 — Value &amp; Credibility</fullName><default>false</default></value>
            <value><fullName>Stage 3 — Direct Ask</fullName><default>false</default></value>
            <value><fullName>Completed</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>