force-app/main/default/objects/Contact/fields/Sequence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Start_Date__c</fullName>
    <label>Sequence Start Date</label>
    <type>Date</type>
</CustomField>