force-app/main/default/objects/Contact/fields/Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Status__c</fullName>
    <label>Sequence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>false</default></value>
            <value><fullName>Paused — Engaged</fullName><default>false</default></value>
            <value><fullName>Paused — Manual</fullName><default>false</default></value>
            <value><fullName>Completed</fullName><default>false</default></value>
            <value><fullName>Deferred</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>