force-app/main/default/objects/Contact/fields/Signal_Source__c.field-meta.xml
<CustomField>
    <fullName>Signal_Source__c</fullName>
    <label>Signal Source</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>